added more gcc warning check

--- a/configure.ac
+++ b/configure.ac
@@ -157,6 +157,7 @@ AC_ARG_ENABLE([gcc-warnings],
 
 AS_IF([test "x$p0f_gcc_warnings" = xyes],
   [ # Add/Delete as needed
+  MAX_STACK_SIZE=32768
   p0f_CFLAGS_ADD([-Wall], [P0F_CFLAGS])
   p0f_CFLAGS_ADD([-pedantic], [P0F_CFLAGS])
   p0f_CFLAGS_ADD([-Wextra], [P0F_CFLAGS])
@@ -167,7 +168,68 @@ AS_IF([test "x$p0f_gcc_warnings" = xyes],
   p0f_CFLAGS_ADD([-Wstrict-overflow],[P0F_CFLAGS])
   p0f_CFLAGS_ADD([-fstrict-overflow],[P0F_CFLAGS])
   p0f_CFLAGS_ADD([-Wpointer-arith],[P0F_CFLAGS])
-  p0f_CFLAGS_ADD([-Wno-format],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wundef],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wformat-security],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Winit-self],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wmissing-include-dirs],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wunused],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wunknown-pragmas],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wstrict-aliasing],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wshadow],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wbad-function-cast],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wcast-align],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wwrite-strings],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wlogical-op],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Waggregate-return],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wstrict-prototypes],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wold-style-definition],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wmissing-prototypes],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wmissing-declarations],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wmissing-noreturn],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wmissing-format-attribute],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wredundant-decls],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wnested-externs],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Winline],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Winvalid-pch],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wvolatile-register-var],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wdisabled-optimization],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wbuiltin-macro-redefined],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wmudflap],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wpacked-bitfield-compat],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wsync-nand],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wattributes],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wcoverage-mismatch],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wmultichar],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wcpp],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wdeprecated-declarations],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wdiv-by-zero],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wdouble-promotion],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wendif-labels],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wformat-contains-nul],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wformat-extra-args],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wformat-zero-length],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wformat=2],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wmultichar],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wnormalized=nfc],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Woverflow],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wpointer-to-int-cast],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wpragmas],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wsuggest-attribute=const],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wsuggest-attribute=noreturn],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wsuggest-attribute=pure],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wtrampolines],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wno-missing-field-initializers],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wno-sign-compare],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wjump-misses-init],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wno-format-nonliteral],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wframe-larger-than=$MAX_STACK_SIZE],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-fstack-protector-all],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-fasynchronous-unwind-tables],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-fdiagnostics-show-option],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-funit-at-a-time],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-fipa-pure-const],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wno-aggregate-return],[P0F_CFLAGS])
+  p0f_CFLAGS_ADD([-Wno-redundant-decls],[P0F_CFLAGS])
   ])
 
 
