add -03 to CFLAGS if not debug

--- a/configure.ac
+++ b/configure.ac
@@ -298,6 +298,7 @@ AS_IF([test "x$p0f_gcc_pie" = xyes],
 
 
 # build p0f instrumented for extra optimization/security (GCC only)
+# general (as in the original build.sh with some enhancement)
 # -fno-delete-null-pointer as the kernel does http://patchwork.kernel.org/patch/36060/
 # add relro 
 # GNU GCC (usually "gcc")
@@ -307,6 +308,11 @@ AS_IF([test "x$GCC" != x],
   	p0f_CFLAGS_ADD([$c], [P0F_CFLAGS])
    done
    p0f_LDFLAGS_ADD([-Wl,-z,relro], [P0F_LDFLAGS])
+   # add -O3 if not debug
+	AS_IF([test "x$p0f_gcc_debug" != xyes],
+	  [ 
+	  p0f_CFLAGS_ADD([-03], [P0F_CFLAGS])
+	  ])
  ])
 
 # Finally put an AC_SUBST for all the CFLAGS and LDFLAGS above
